# telethon-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/telethon_mcp/: auth.py  client.py  server.py
src/telethon_mcp/tools/: auth.py  dialogs.py  entities.py  media.py  messages.py
