[project]
name = "telethon-mcp-server"
version = "0.1.0"
description = "Personal MCP server for Telegram via Telethon"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.42",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
]

[project.scripts]
telethon-mcp-server = "telethon_mcp.server:main"
telethon-mcp-auth = "telethon_mcp.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telethon_mcp"]
